# mas-workflow-kit-trae

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.ai_infra/: __init__.py  bootstrap.py  ide_contract_paths.py  install-contract.json  manifest.yaml  project.config.yaml.example
.ai_infra/docs/: README.md
.ai_infra/templates/: AGENTS.stub.md
.ai_infra/workflows/: README.md
.github/: dependabot.yml
.github/workflows/: kit-quality.yml
.trae/: mcp.user.example.json
.trae/agents/: implementer.md  integrator-mas-agent.md  researcher.md  verifier.md
.trae/rules/: advisory-audit-alignment-enforcement.md  agent-implementer.md  agent-integrator-mas-agent.md  agent-researcher.md  agent-verifier.md  agent-workflow-drift-guard.md  commit-trailer-format.md  implementation-workflow-governance.md  pr-workflow-enforcement.md
_example_repo/mas-workflow-kit-main/: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
agents/: enterprise-auditor.md
examples/consumer-minimal/: README.md
mas_workflow_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
overlays/: README.md
payload/: NOTICE
payload/.ai_infra/: bootstrap.py  ide_contract_paths.py  install-contract.json  manifest.yaml  paths.py
payload/.trae/: mcp.json  mcp.registry.yaml
payload/cursor_workflow/: __init__.py  cli.py
payload/trae_workflow/: cli.py
rules/: advisory-audit-alignment-enforcement.mdc
skills/audit-module-map/: SKILL.md
skills/enterprise-architecture-audit/: SKILL.md
trae_workflow/: cli.py
(+379 files in other folders)
